# hid-replay

./: .gitignore  Makefile.am  README  README.md  configure.ac  meson.build
python/: report.py
src/: Makefile.am  hid-recorder.c  hid-recorder.txt  hid-replay.c  hid-replay.txt
tools/: HID_editor.ui  capture_usbmon.py  editor.py  hid.py  parse_hid.py  parse_hut.py  parse_rdesc.py  plot_evtest.py  plot_hid.py  plot_traces.py  usbmon2hid-replay.py  write_fw.py
tools/data/: 0001_generic_desktop.hut  0005_gaming_controls.hut  0006_generic_device_controls.hut  0008_leds.hut  000b_telephony_devices.hut  000c_consumer_devices.hut  000d_digitizers.hut  000e_haptic_page.hut  0014_alphanumeric_display.hut  0020_sensor.hut  0084_power_device.hut  0090_camera_control.hut  alphanumeric_display.hut  arcade_page_oaaf.hut  bar_code_scanner.hut  battery_system.hut  button.hut  camera_control.hut  consumer_devices.hut  digitizers.hut  f1d0_fast_identity_online_alliance.hut  ff0d_wacom.hut  gaming_controls.hut  gaming_device.hut  generic_desktop.hut  generic_device_controls.hut  keyboard.hut  leds.hut  magnetic_stripe_reading.hut  medical_instruments.hut  monitor.hut  monitor_enumerated_values.hut  ordinals.hut  power_device.hut  scale.hut  sensor.hut  simulation_controls.hut  sports_controls.hut  telephony_devices.hut  undefined.hut  (+6 more)
